...

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appbar"
            android:layout_above="@id/buttonStartWalk"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
        </androidx.viewpager.widget.ViewPager>

        <Button
            android:id="@+id/buttonStartWalk"
            android:layout_width="match_parent"
...
